--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,20 +41,20 @@ endif()
 message(STATUS "* ========================== *")
 
 # Выходные директории
-set(OUTPUT_DEBUG_DIR "${CMAKE_CURRENT_LIST_DIR}/output/debug")
-set(OUTPUT_RELEASE_DIR "${CMAKE_CURRENT_LIST_DIR}/output/release")
+set(OUTPUT_DEBUG_DIR "${CMAKE_CURRENT_LIST_DIR}/Output/Debug")
+set(OUTPUT_RELEASE_DIR "${CMAKE_CURRENT_LIST_DIR}/Output/Release")
 
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DEBUG_DIR}/lib)
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DEBUG_DIR}/lib)
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DEBUG_DIR}/bin)
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DEBUG_DIR}/Lib)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DEBUG_DIR}/Lib)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DEBUG_DIR}/Bin)
 
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_RELEASE_DIR}/lib)
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_RELEASE_DIR}/lib)
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_RELEASE_DIR}/bin)
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_RELEASE_DIR}/Lib)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_RELEASE_DIR}/Lib)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_RELEASE_DIR}/Bin)
 
 # Общие заголовочные файлы
 set(SHARED_INCLUDE ${CMAKE_CURRENT_LIST_DIR})
 
 # Подключаем проекты
-#add_subdirectory(algorithms)
-#add_subdirectory(data_structures)
+#add_subdirectory(Algorithms)
+#add_subdirectory(DataStructures)
