Добавление cmake-модуля с вспомогательными функциями

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,17 +4,18 @@ cmake_minimum_required(VERSION 3.22)
 # Объявление проекта
 project(algorithms C CXX)
 
-# Проверка доступности тестирования
-if(EXISTS ${CMAKE_CURRENT_LIST_DIR}/googletest)
-   message(STATUS "googletest found in ${CMAKE_CURRENT_LIST_DIR}")
+# Подключение внутреннего модуля с вспомогательными функциями
+include(internal.cmake)
+
+# Проверка доступности googletest
+is_googletest_available()
+
+if(IS_GOOGLETEST_FOUND)
    enable_testing()
-   add_subdirectory(googletest)
-   set(IS_TESTING_AVAILABLE ON)
-   set(GTEST_INCLUDE "${CMAKE_CURRENT_LIST_DIR}/googletest/googletest/include")
-else()
-   message(STATUS "googletest not found in ${CMAKE_CURRENT_LIST_DIR}")
-   set(IS_TESTING_AVAILABLE OFF)
 endif()
+
+# Проверка доступности pvs-studio
+is_pvs_studio_available()
 
 # Тип сборки по умолчанию
 if (NOT CMAKE_BUILD_TYPE)
@@ -28,67 +29,17 @@ elseif(UNIX)
    set(TARGET_OS "Linux")
 endif()
 
-# Проверка доступности pvs-studio
-if (WIN32)
-   # The registry value is only read when you do some cache operation on it.
-   # https://stackoverflow.com/questions/1762201/reading-registry-values-with-cmake
-   GET_FILENAME_COMPONENT(ROOT "[HKEY_LOCAL_MACHINE\\SOFTWARE\\WOW6432Node\\ProgramVerificationSystems\\PVS-Studio;installDir]" ABSOLUTE CACHE)
-
-   if (EXISTS "${ROOT}")
-      set(PATHS "${ROOT}")
-   else()
-      set(ROOT "PROGRAMFILES(X86)")
-      set(ROOT "$ENV{${ROOT}}/PVS-Studio")
-      string(REPLACE \\ / ROOT "${ROOT}")
-
-      if (EXISTS "${ROOT}")
-         set(PATHS "${ROOT}")
-      else()
-         set(ROOT "PATH")
-         set(ROOT "$ENV{${ROOT}}")
-         set(PATHS "${ROOT}")
-      endif()
-   endif()
-
-   SET(PVS_STUDIO_BIN "CompilerCommandsAnalyzer.exe")
-   SET(PVS_STUDIO_CONVERTER "HtmlGenerator.exe")
-else()
-   SET(PVS_STUDIO_BIN "pvs-studio-analyzer")
-   SET(PVS_STUDIO_CONVERTER "plog-converter")
-endif()
-
-find_program(PVS_STUDIO_BIN_PATH "${PVS_STUDIO_BIN}" ${PATHS})
-set(PVS_STUDIO_BIN "${PVS_STUDIO_BIN_PATH}")
-
-if (NOT EXISTS "${PVS_STUDIO_BIN}")
-   message(FATAL_ERROR "pvs-studio-analyzer is not found")
-endif()
-
-find_program(PVS_STUDIO_CONVERTER_PATH "${PVS_STUDIO_CONVERTER}" ${PATHS})
-set(PVS_STUDIO_CONVERTER "${PVS_STUDIO_CONVERTER_PATH}")
-
-if (NOT EXISTS "${PVS_STUDIO_CONVERTER}")
-   message(FATAL_ERROR "plog-converter is not found")
-endif()
-
-if(EXISTS ${PVS_STUDIO_BIN})
-   message(STATUS "PVS-Studio found in ${CMAKE_CURRENT_LIST_DIR}/pvs-studio-cmake-module")
-   set(IS_PVS_STUDIO_AVAILABLE ON)
-else()
-   message(STATUS "PVS-Studio not found")
-endif()
-
 # Отладочная информация о конфигурации сборки
 message(STATUS "* ========================== *")
 message(STATUS "| Buid type : ${CMAKE_BUILD_TYPE}")
 message(STATUS "| Target OS : ${TARGET_OS}")
 message(STATUS "| Generator : ${CMAKE_GENERATOR}")
-if (IS_TESTING_AVAILABLE)
+if (IS_GOOGLETEST_FOUND)
    message(STATUS "| Testing   : Available")
 else()
    message(STATUS "| Testing   : Not Available")
 endif()
-if(IS_PVS_STUDIO_AVAILABLE)
+if(IS_PVS_STUDIO_FOUND)
    message(STATUS "| PVS-Studio: Available")
 else()
    message(STATUS "| PVS-Studio: Not Available")
@@ -117,7 +68,7 @@ set(TARGET_LIST)
 add_subdirectory(DataStructures)
 
 # Подключаем статический анализатор pvs-studio
-if(IS_PVS_STUDIO_AVAILABLE)
+if(IS_PVS_STUDIO_FOUND)
    include(pvs-studio-cmake-module/PVS-Studio.cmake)
 
    add_custom_target(
