Проекты перемещены в директорию Src

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,8 +47,10 @@ endif()
 message(STATUS "* ========================== *")
 
 # Выходные директории
-set(OUTPUT_DEBUG_DIR "${CMAKE_CURRENT_LIST_DIR}/Output/Debug")
-set(OUTPUT_RELEASE_DIR "${CMAKE_CURRENT_LIST_DIR}/Output/Release")
+set(PROJECT_PATH ${CMAKE_CURRENT_LIST_DIR})
+
+set(OUTPUT_DEBUG_DIR "${PROJECT_PATH}/Output/Debug")
+set(OUTPUT_RELEASE_DIR "${PROJECT_PATH}/Output/Release")
 
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DEBUG_DIR}/Lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DEBUG_DIR}/Lib)
@@ -58,28 +60,5 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_RELEASE_DIR}/Lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_RELEASE_DIR}/Lib)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_RELEASE_DIR}/Bin)
 
-# Общие заголовочные файлы
-set(SHARED_INCLUDE_DIR ${CMAKE_CURRENT_LIST_DIR})
-
 # Подключаем проекты
-set(TARGET_LIST)
-
-#add_subdirectory(Algorithms)
-add_subdirectory(DataStructures)
-
-# Подключаем статический анализатор pvs-studio
-if(IS_PVS_STUDIO_FOUND)
-   include(pvs-studio-cmake-module/PVS-Studio.cmake)
-
-   add_custom_target(
-      RmPvsLog
-      COMMAND ${CMAKE_COMMAND} -E rm -r -f ${CMAKE_CURRENT_LIST_DIR}/Output/PvsStudioLog)
-
-   pvs_studio_add_target(TARGET Pvs ALL
-                         FORMAT fullhtml
-                         ANALYZE ${TARGET_LIST}
-                         MODE GA:1,2
-                         LOG ${CMAKE_CURRENT_LIST_DIR}/Output/PvsStudioLog)
-
-   add_dependencies(Pvs RmPvsLog)
-endif()
+add_subdirectory(Src)
